Correction collapse version mobile

--- a/src/Components/Collapse/collapse.scss
+++ b/src/Components/Collapse/collapse.scss
@@ -49,7 +49,7 @@
 
             @media (max-width: $sm) {
 
-                padding: 4px 10px;
+                padding: 6px 10px;
             }
 
             h2 {
