--- a/src/assets/Styles/settings.scss
+++ b/src/assets/Styles/settings.scss
@@ -156,7 +156,7 @@ ul {
         margin: 0 auto;
 
         .collapse-elm {
-            width: 80%;
+            width: 90%;
         }
     }
 
@@ -164,6 +164,10 @@ ul {
 
         max-width: 90%;
         margin: 0 auto;
+
+        .collapse-elm {
+            width: 100%;
+        }
     }
 }
 
